src/objects/Reseau_Associe__c.object
<CustomObject>
    <description>Ensemble des réseaux associés à l&apos;instant t avec un relais.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Associé</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commentaires__c</fullName>
        <label>Commentaires</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Compte__c</fullName>
        <label>Compte</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Reseaux_clients_associes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_de_fin_du_statut__c</fullName>
        <label>Date de fin du statut</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_modification__c</fullName>
        <label>Date de modification</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Desactive__c</fullName>
        <formula>IF(Active__c =true, false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dissocié</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Etat_du_statut__c</fullName>
        <label>Etat du statut</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Temporaire</fullName>
                </value>
                <value>
                    <fullName>Définitif</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclu__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclu</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interdit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interdit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Macroprofil__c</fullName>
        <formula>Compte__r.Macroprofil_actuel__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Macroprofil</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modifiable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Modifiable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Motif_d_activation_desactivation__c</fullName>
        <label>Motif d&apos;association/dissocation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Création</fullName>
                </value>
                <value>
                    <fullName>Régulation</fullName>
                </value>
                <value>
                    <fullName>Autres / Voir commentaire</fullName>
                </value>
                <value>
                    <fullName>Relais en surcharge</fullName>
                </value>
                <value>
                    <fullName>Concurrence chargeur</fullName>
                </value>
                <value>
                    <fullName>Omission</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReferenceExterne__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Réference Externe</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Reference_Pudo__c</fullName>
        <formula>Compte__r.Reference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Réference Pudo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reseau__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Réseau</label>
        <referenceTo>Reseau__c</referenceTo>
        <relationshipLabel>Points relais associés au réseau</relationshipLabel>
        <relationshipName>Reseaux_associes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_de_reseau__c</fullName>
        <formula>TEXT(Reseau__r.Type_de_reseau__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type de réseau</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tech_bypassNonModifiableCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>tech_bypassNonModifiableCheck</label>
        <type>Checkbox</type>
    </fields>
    <label>Réseau associé</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Reseau__c</columns>
        <columns>Compte__c</columns>
        <columns>Reference_Pudo__c</columns>
        <columns>Macroprofil__c</columns>
        <columns>Active__c</columns>
        <columns>Modifiable__c</columns>
        <columns>Motif_d_activation_desactivation__c</columns>
        <columns>Etat_du_statut__c</columns>
        <columns>Date_de_fin_du_statut__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tout les réseaux associés</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>VKO_Liste_des_pudos_associ_s_RES_SHOWROO</fullName>
        <booleanFilter>1 AND 2 AND  3</booleanFilter>
        <columns>NAME</columns>
        <columns>ReferenceExterne__c</columns>
        <columns>Reference_Pudo__c</columns>
        <columns>Compte__c</columns>
        <columns>Macroprofil__c</columns>
        <columns>Active__c</columns>
        <columns>Modifiable__c</columns>
        <columns>Desactive__c</columns>
        <columns>Exclu__c</columns>
        <columns>Interdit__c</columns>
        <columns>Motif_d_activation_desactivation__c</columns>
        <columns>Commentaires__c</columns>
        <columns>Etat_du_statut__c</columns>
        <columns>Date_de_fin_du_statut__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reseau__c</field>
            <operation>equals</operation>
            <value>RES_SHOWROOMPRIVE_CLP</value>
        </filters>
        <filters>
            <field>Modifiable__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Reference_Pudo__c</field>
            <operation>contains</operation>
            <value>FR51886,FR53636,FR53649,FR54782</value>
        </filters>
        <label>VKO-Liste des pudos asso dis RES_SHOWROO</label>
        <language>fr</language>
        <sharedTo>
            <group>PUS_FR_DOR</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>RA-{0000}</displayFormat>
        <label>Numéro du Réseau associé</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Réseaux associés</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>RESA_VR02_Modif_Res_temp_Fin_Obligatoire</fullName>
        <active>true</active>
        <description>Si &quot;Etat de statut&quot; est temporaire alors vous devez obligatoirement renseigner la date de fin. La date de fin ne doit pas être dans le passé.</description>
        <errorConditionFormula>AND(
Not($User.BypassValidationRule__c),
ISPICKVAL (Etat_du_statut__c,&quot;temporaire&quot; ),
OR(
ISBLANK( Date_de_fin_du_statut__c ),
Date_de_fin_du_statut__c &lt; TODAY()
)
)</errorConditionFormula>
        <errorDisplayField>Date_de_fin_du_statut__c</errorDisplayField>
        <errorMessage>Si &quot;Etat de statut&quot; est temporaire alors vous devez obligatoirement renseigner la date de fin. La date de fin ne doit pas être dans le passé.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RESA_VR03_DateFinStatut_SupDateModif</fullName>
        <active>true</active>
        <description>La date de fin du statut ne peut pas être antérieur à la date de modification</description>
        <errorConditionFormula>AND(!$User.BypassValidationRule__c, 
ISPICKVAL (Etat_du_statut__c,&quot;temporaire&quot;), 
Date_de_fin_du_statut__c &lt; Date_de_modification__c 
)</errorConditionFormula>
        <errorDisplayField>Date_de_fin_du_statut__c</errorDisplayField>
        <errorMessage>La date de fin du statut ne peut pas être antérieur à la date de modification</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ReseauAssocie_VR01_chooseOneValue</fullName>
        <active>true</active>
        <errorConditionFormula>If(Active__c = true,1,0)+ 
If(Exclu__c = true,1,0)+ 
If(Interdit__c = true, 1,0) 
&gt; 1</errorConditionFormula>
        <errorMessage>Veuillez choisir une des cases à cochés suivantes (Activé, Exclu ou Interdit)</errorMessage>
    </validationRules>
</CustomObject>